--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <title>CG-Hub - Accueil</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/24c4d1c3cd.js" crossorigin="anonymous"></script>  
+    <script src="https://kit.fontawesome.com/24c4d1c3cd.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="img/logo-CG.png" type="image/x-icon">
 </head>
 <body>
+
+    <div id="warning">
+        <i class="fa-solid fa-triangle-exclamation"></i>
+        <span>Ce site étant en <span class="bold">version beta</span>, la barre de recherche n'est pas encore fonctionnelle.</span>
+    </div>
 
     <nav>
         <div id="nav-bar">
@@ -28,11 +34,7 @@
             </div>
         </div>
     </nav>
-    
-    <div id="warning">
-        <i class="fa-solid fa-triangle-exclamation"></i>
-        <span>Ce site étant en version beta, la barre de recherche n'est pas encore fonctionnelle.</span>
-    </div>
+
 
     <section id="hero">
         <div id="title">
