--- a/pages/p1.html
+++ b/pages/p1.html
@@ -6,13 +6,19 @@
     <title>CG-Hub - Page 1</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/24c4d1c3cd.js" crossorigin="anonymous"></script>  
+    <script src="https://kit.fontawesome.com/24c4d1c3cd.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../img/logo-CG.png" type="image/x-icon">
 </head>
 <body>
     
+    <div id="warning">
+        <i class="fa-solid fa-triangle-exclamation"></i>
+        <span>Ce site étant en <span class="bold">version beta</span>, la barre de recherche n'est pas encore fonctionnelle.</span>
+    </div>
+
     <nav>
         <div id="nav-bar">
-            <a id="nav-bar-title" href="index.html" class="orange">
+            <a id="nav-bar-title" href="../index.html" class="orange">
                 <img width="60px" src="../img/logo-CG.png" alt="logo du site">
             </a>
             <div id="nav-pages">
@@ -29,10 +35,6 @@
         </div>
     </nav>
 
-    <div id="warning">
-        <i class="fa-solid fa-triangle-exclamation"></i>
-        <span>Ce site étant en version beta, la barre de recherche n'est pas encore fonctionnelle.</span>
-    </div>
 
     <section id="hero">
         <div id="top">
@@ -178,9 +180,11 @@
 
 
         <div id="line">
-            <a target="_blank" href="">
+
+            <!-- Elden Ring -->
+            <a target="_blank" href="https://www.dlink4.com/jXSX">
                 <div id="game">
-                    <img width="250px" height="335px" src="">
+                    <img width="250px" height="335px" src="https://cdn11.bigcommerce.com/s-xs1cevxe43/images/stencil/760x760/products/2418/9486/Steam_SD_edition__02413.1638342756.jpg?c=2">
                 </div>
             </a>
             <a target="_blank" href="">
