--- a/pages/p3.html
+++ b/pages/p3.html
@@ -42,15 +42,21 @@
             <h2>Touts vos jeux préférés gratuits</h2>
             <input type="search" title="search-bar" id="search-bar" placeholder="Rechercher sur CG-Hub...">
         </div>
+
+    
         <div id="line">
-            <a target="_blank" href="">
+
+            <!-- Planet Coaster -->
+            <a target="_blank" href="https://www.clictune.com/jYju">
                 <div id="game">
-                    <img width="250px" height="335px" src="">
+                    <img width="250px" height="335px" src="https://gpstatic.com/acache/44/62/1/fr/packshot-269c5babe8fd2abd8849828f2701087f.jpg">
                 </div>
             </a>
-            <a target="_blank" href="">
+
+            <!-- Raft -->
+            <a target="_blank" href="https://www.clictune.com/jYjv">
                 <div id="game">
-                    <img width="250px" height="335px" src="">
+                    <img width="250px" height="335px" src="https://cdn.cdkeys.com/500x706/media/catalog/product/i/n/inquisitor_artwork_cover_6_.jpg">
                 </div>
             </a>
             <a target="_blank" href="">
