--- a/pages/p3.html
+++ b/pages/p3.html
@@ -59,19 +59,25 @@
                     <img width="250px" height="335px" src="https://cdn.cdkeys.com/500x706/media/catalog/product/i/n/inquisitor_artwork_cover_6_.jpg">
                 </div>
             </a>
-            <a target="_blank" href="">
+
+            <!-- Escape the Backrooms -->
+            <a target="_blank" href="https://www.clictune.com/jYwL">
                 <div id="game">
-                    <img width="250px" height="335px" src="">
+                    <img width="250px" height="335px" src="https://cdn.cdkeys.com/700x700/media/catalog/product/e/s/escape_the_backrooms.jpg">
                 </div>
             </a>
-            <a target="_blank" href="">
+
+            <!-- Inside the Backrooms -->
+            <a target="_blank" href="https://www.clictune.com/jYwM">
                 <div id="game">
-                    <img width="250px" height="335px" src="">
+                    <img width="250px" height="335px" src="https://media.senscritique.com/media/000020870100/0/inside_the_backrooms.jpg">
                 </div>
             </a>
-            <a target="_blank" href="">
+
+            <!-- Only Up -->
+            <a target="_blank" href="https://www.clictune.com/jZnm">
                 <div id="game">
-                    <img width="250px" height="335px" src="">
+                    <img width="250px" height="335px" src="https://media.senscritique.com/media/000021388518/0/only_up.jpg">
                 </div>
             </a>
             <a target="_blank" href="">
