--- a/index.html
+++ b/index.html
@@ -185,6 +185,42 @@
     </section>
 
 
+    <section id="tarifs" class="tarifs">
+        <img src="images/top_wave.svg" alt="Vague haut" class="wave-top">
+        <h1>Tarifs</h1>
+        <div class="tarifs-container">
+            <div class="card-tarif">
+                <h2>Offre de Base</h2>
+                <h3>150€</h3>
+                <ul>
+                    <li>Un site vitrine 1 page (landing page)</li>
+                    <li>Design moderne et sur mesure</li>
+                    <li>Code 100 % fait main (HTML/CSS/JS)</li>
+                    <li>Responsive mobile / tablette</li>
+                    <li>Livraison sous 7 jours</li>
+                    <li>Hébergement test gratuit (GitHub Pages)</li>
+                    <li>Retouches légères incluses</li>
+                </ul>
+            </div>
+            <div class="card-tarif options-tarifs">
+                <h2>Options</h2>
+                <h3>150€</h3>
+                <ul>
+                    <li>Un site vitrine 1 page (landing page)</li>
+                    <li>Design moderne et sur mesure</li>
+                    <li>Code 100 % fait main (HTML/CSS/JS)</li>
+                    <li>Responsive mobile / tablette</li>
+                    <li>Livraison sous 7 jours</li>
+                    <li>Hébergement test gratuit (GitHub Pages)</li>
+                    <li>Retouches légères incluses</li>
+                </ul>
+            </div>
+        </div>
+
+        <img src="images/bottom_wave.svg" alt="Vagues bas" class="wave-bottom">
+    </section>
+
+
 
 
 
